feat: Repository link added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
     <select name="language-switch" id="language-switch"></select>
 
+    <br>
+    <br>
+
+    <a href="https://github.com/Wilian-N-Silva/i18n/" data-i18n-key="project-repository">Repositório do Github</a>
+
     <script src="assets/script/main.js"></script>
 </body>
 
